# serializer version: 1
# name: test_maintaining_features[docs-container-no_pypi]
  '''
  # Maintaining PKFire
  
  ## First time setup
  
  These steps only need to be completed once after the project is first created.
  
  ### GitHub Repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ### Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ### Container registry (ghcr.io)
  
  Enable write access for Actions:
  
  [Settings → Actions → General][repo-settings-actions-general]
  → Workflow permissions → Read and write permissions
  
  ### GitHub Pages
  
  [Settings → Pages][repo-settings-pages] → Source → GitHub Actions
  
  ## Releasing
  
  Create and push a tag:
  
  ```sh
  git tag vX.Y.Z
  git push --tags
  ```
  
  [renovate]: https://github.com/apps/renovate
  [repo-releases]: https://github.com/ness/PKFire/releases
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-actions-general]: https://github.com/ness/PKFire/settings/actions
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  [repo-settings-pages]: https://github.com/ness/PKFire/settings/pages
  
  '''
# ---
# name: test_maintaining_features[docs-container-pypi]
  '''
  # Maintaining PKFire
  
  ## First time setup
  
  These steps only need to be completed once after the project is first created.
  
  ### GitHub Repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ### Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ### PyPI publishing
  
  This project uses [trusted publishing][pypi-trusted-publishing] so no API tokens
  need to be stored as secrets.
  
  1. On PyPI, add a (pending) trusted publisher in your
     [Trusted Publisher Management][pypi-publishing-settings] settings:
       - Publisher: GitHub Actions
       - Owner: `ness`
       - Repository: `PKFire`
       - Workflow: `release.yaml`
       - Environment: `pypi`
  2. Create the `pypi` environment in the GitHub repository:
     [Settings → Environments][repo-settings-envs] → New environment → `pypi`
  3. Publish a release by pushing a tag:
     ```sh
     git tag v0.1.0  # or your desired first version number
     git push --tags
     ```
  
  ### Container registry (ghcr.io)
  
  Enable write access for Actions:
  
  [Settings → Actions → General][repo-settings-actions-general]
  → Workflow permissions → Read and write permissions
  
  ### GitHub Pages
  
  [Settings → Pages][repo-settings-pages] → Source → GitHub Actions
  
  ## Releasing
  
  Create and push a tag:
  
  ```sh
  git tag vX.Y.Z
  git push --tags
  ```
  
  [pypi-publishing-settings]: https://pypi.org/manage/account/publishing/
  [pypi-trusted-publishing]: https://docs.pypi.org/trusted-publishers/
  [renovate]: https://github.com/apps/renovate
  [repo-releases]: https://github.com/ness/PKFire/releases
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-actions-general]: https://github.com/ness/PKFire/settings/actions
  [repo-settings-envs]: https://github.com/ness/PKFire/settings/environments
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  [repo-settings-pages]: https://github.com/ness/PKFire/settings/pages
  
  '''
# ---
# name: test_maintaining_features[docs-no_container-no_pypi]
  '''
  # Maintaining PKFire
  
  ## First time setup
  
  These steps only need to be completed once after the project is first created.
  
  ### GitHub Repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ### Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ### GitHub Pages
  
  [Settings → Pages][repo-settings-pages] → Source → GitHub Actions
  
  ## Releasing
  
  Create and push a tag:
  
  ```sh
  git tag vX.Y.Z
  git push --tags
  ```
  
  [renovate]: https://github.com/apps/renovate
  [repo-releases]: https://github.com/ness/PKFire/releases
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  [repo-settings-pages]: https://github.com/ness/PKFire/settings/pages
  
  '''
# ---
# name: test_maintaining_features[docs-no_container-pypi]
  '''
  # Maintaining PKFire
  
  ## First time setup
  
  These steps only need to be completed once after the project is first created.
  
  ### GitHub Repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ### Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ### PyPI publishing
  
  This project uses [trusted publishing][pypi-trusted-publishing] so no API tokens
  need to be stored as secrets.
  
  1. On PyPI, add a (pending) trusted publisher in your
     [Trusted Publisher Management][pypi-publishing-settings] settings:
       - Publisher: GitHub Actions
       - Owner: `ness`
       - Repository: `PKFire`
       - Workflow: `release.yaml`
       - Environment: `pypi`
  2. Create the `pypi` environment in the GitHub repository:
     [Settings → Environments][repo-settings-envs] → New environment → `pypi`
  3. Publish a release by pushing a tag:
     ```sh
     git tag v0.1.0  # or your desired first version number
     git push --tags
     ```
  
  ### GitHub Pages
  
  [Settings → Pages][repo-settings-pages] → Source → GitHub Actions
  
  ## Releasing
  
  Create and push a tag:
  
  ```sh
  git tag vX.Y.Z
  git push --tags
  ```
  
  [pypi-publishing-settings]: https://pypi.org/manage/account/publishing/
  [pypi-trusted-publishing]: https://docs.pypi.org/trusted-publishers/
  [renovate]: https://github.com/apps/renovate
  [repo-releases]: https://github.com/ness/PKFire/releases
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-envs]: https://github.com/ness/PKFire/settings/environments
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  [repo-settings-pages]: https://github.com/ness/PKFire/settings/pages
  
  '''
# ---
# name: test_maintaining_features[no_docs-container-no_pypi]
  '''
  # Maintaining PKFire
  
  ## First time setup
  
  These steps only need to be completed once after the project is first created.
  
  ### GitHub Repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ### Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ### Container registry (ghcr.io)
  
  Enable write access for Actions:
  
  [Settings → Actions → General][repo-settings-actions-general]
  → Workflow permissions → Read and write permissions
  
  ## Releasing
  
  Create and push a tag:
  
  ```sh
  git tag vX.Y.Z
  git push --tags
  ```
  
  [renovate]: https://github.com/apps/renovate
  [repo-releases]: https://github.com/ness/PKFire/releases
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-actions-general]: https://github.com/ness/PKFire/settings/actions
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  
  '''
# ---
# name: test_maintaining_features[no_docs-container-pypi]
  '''
  # Maintaining PKFire
  
  ## First time setup
  
  These steps only need to be completed once after the project is first created.
  
  ### GitHub Repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ### Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ### PyPI publishing
  
  This project uses [trusted publishing][pypi-trusted-publishing] so no API tokens
  need to be stored as secrets.
  
  1. On PyPI, add a (pending) trusted publisher in your
     [Trusted Publisher Management][pypi-publishing-settings] settings:
       - Publisher: GitHub Actions
       - Owner: `ness`
       - Repository: `PKFire`
       - Workflow: `release.yaml`
       - Environment: `pypi`
  2. Create the `pypi` environment in the GitHub repository:
     [Settings → Environments][repo-settings-envs] → New environment → `pypi`
  3. Publish a release by pushing a tag:
     ```sh
     git tag v0.1.0  # or your desired first version number
     git push --tags
     ```
  
  ### Container registry (ghcr.io)
  
  Enable write access for Actions:
  
  [Settings → Actions → General][repo-settings-actions-general]
  → Workflow permissions → Read and write permissions
  
  ## Releasing
  
  Create and push a tag:
  
  ```sh
  git tag vX.Y.Z
  git push --tags
  ```
  
  [pypi-publishing-settings]: https://pypi.org/manage/account/publishing/
  [pypi-trusted-publishing]: https://docs.pypi.org/trusted-publishers/
  [renovate]: https://github.com/apps/renovate
  [repo-releases]: https://github.com/ness/PKFire/releases
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-actions-general]: https://github.com/ness/PKFire/settings/actions
  [repo-settings-envs]: https://github.com/ness/PKFire/settings/environments
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  
  '''
# ---
# name: test_maintaining_features[no_docs-no_container-no_pypi]
  '''
  # Maintaining PKFire
  
  ## First time setup
  
  These steps only need to be completed once after the project is first created.
  
  ### GitHub Repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ### Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ## Releasing
  
  Create and push a tag:
  
  ```sh
  git tag vX.Y.Z
  git push --tags
  ```
  
  [renovate]: https://github.com/apps/renovate
  [repo-releases]: https://github.com/ness/PKFire/releases
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  
  '''
# ---
# name: test_maintaining_features[no_docs-no_container-pypi]
  '''
  # Maintaining PKFire
  
  ## First time setup
  
  These steps only need to be completed once after the project is first created.
  
  ### GitHub Repository
  
  [Settings → General][repo-settings]:
  
  - [x] Allow merge commits
  - [ ] Allow squash merging
  - [ ] Allow rebase merging
  - [x] Automatically delete head branches
  
  [Settings → Branches][repo-settings-branches] → Add branch protection rule
  for the Default branch (`main`):
  
  - [x] Restrict deletions
  - [x] Require a pull request before merging
  - [x] Block force pushes
  
  ### Renovate
  
  Ensure the [Renovate app][renovate] is installed on your account, then
  enable it for `ness/PKFire`.
  
  ### PyPI publishing
  
  This project uses [trusted publishing][pypi-trusted-publishing] so no API tokens
  need to be stored as secrets.
  
  1. On PyPI, add a (pending) trusted publisher in your
     [Trusted Publisher Management][pypi-publishing-settings] settings:
       - Publisher: GitHub Actions
       - Owner: `ness`
       - Repository: `PKFire`
       - Workflow: `release.yaml`
       - Environment: `pypi`
  2. Create the `pypi` environment in the GitHub repository:
     [Settings → Environments][repo-settings-envs] → New environment → `pypi`
  3. Publish a release by pushing a tag:
     ```sh
     git tag v0.1.0  # or your desired first version number
     git push --tags
     ```
  
  ## Releasing
  
  Create and push a tag:
  
  ```sh
  git tag vX.Y.Z
  git push --tags
  ```
  
  [pypi-publishing-settings]: https://pypi.org/manage/account/publishing/
  [pypi-trusted-publishing]: https://docs.pypi.org/trusted-publishers/
  [renovate]: https://github.com/apps/renovate
  [repo-releases]: https://github.com/ness/PKFire/releases
  [repo-settings]: https://github.com/ness/PKFire/settings
  [repo-settings-envs]: https://github.com/ness/PKFire/settings/environments
  [repo-settings-branches]: https://github.com/ness/PKFire/settings/branches
  
  '''
# ---
